@@ -4,6 +4,7 @@ PostGIS 3.6.0
 * Breaking Changes *
 
   - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)
+  - #5829, remove constraint checking from geometry_columns view (Paul Ramsey)
 
 * Deprecated signatures *
 
